add call to get current node count
