# assets/generated/swagger/api.swagger.json
@@ -198,6 +198,60 @@
         ]
       }
     },
+    "/api/v1/cluster/scale": {
+      "get": {
+        "summary": "Will retrieve node count",
+        "operationId": "GetClusterNodeCount",
+        "responses": {
+          "200": {
+            "description": "",
+            "schema": {
+              "$ref": "#/definitions/cmaaksGetClusterNodeCountReply"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "name",
+            "description": "Name of the cluster to be looked up.",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "credentials.app_id",
+            "description": "The AppId for API Access.",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "credentials.tenant",
+            "description": "The Tenant for API access.",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "credentials.password",
+            "description": "The Password for API access.",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "credentials.subscription_id",
+            "description": "The Subscription for API access.",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "Cluster"
+        ]
+      }
+    },
     "/api/v1/cluster/upgrade": {
       "get": {
         "summary": "Will retrieve available upgrades of a cluster",
@@ -550,6 +604,26 @@
           "title": "List of clusters"
         }
       }
+    },
+    "cmaaksGetClusterNodeCountReply": {
+      "type": "object",
+      "properties": {
+        "ok": {
+          "type": "boolean",
+          "format": "boolean",
+          "title": "Is the cluster in the system"
+        },
+        "name": {
+          "type": "string",
+          "title": "the available node pool name"
+        },
+        "count": {
+          "type": "integer",
+          "format": "int32",
+          "title": "The available node count"
+        }
+      },
+      "title": "Reply with available node count"
     },
     "cmaaksGetClusterReply": {
       "type": "object",
