# internal/apiserver/cluster.go
@@ -190,3 +190,22 @@ func (s *Server) UpgradeCluster(ctx context.Context, in *pb.UpgradeClusterMsg) (
 		},
 	}, nil
 }
+
+func (s *Server) GetClusterNodeCount(ctx context.Context, in *pb.GetClusterNodeCountMsg) (reply *pb.GetClusterNodeCountReply, err error) {
+	
+	clusterClient, err := az.GetClusterClient(in.Credentials.Tenant, in.Credentials.AppId, in.Credentials.Password, in.Credentials.SubscriptionId)
+	if err != nil {
+		return nil, fmt.Errorf("cannot get aks client: %v", err)
+	}
+
+	result, err := az.GetClusterNodeCount(ctx, clusterClient, in.Name)
+	if err != nil {
+		return nil, fmt.Errorf("cannot retrieve cluster node count: %v", err)
+	}
+
+	return &pb.GetClusterNodeCountReply{
+		Ok:    true,
+		Name:  *result.Name,
+		Count: *result.Count,
+	}, nil
+}
